@@ -119,23 +119,41 @@
                t t "Required argument is not a symbol: \"a\"")
     (test-case '())
     (test-case '(x))
+    ;; repeated names and keywords
+    (test-case '(x x)
+               t t "The variable X occurs more than once")
+    (test-case '(x &rest x)
+               t t "The variable X occurs more than once")
+    (test-case '(&optional x x)
+               t t "The variable X occurs more than once")
+    (test-case '(&key x ((:y x)))
+               t t "The variable X occurs more than once")
+    (test-case '(&key x ((:x y)))
+               t t "The keyword :X occurs more than once")
+    (test-case '(&key ((:x a)) ((:x b)))
+               t t "The keyword :X occurs more than once")
+    ;; illegal variable names
+    (test-case '(:pi)
+               t t ":PI is a keyword and cannot be used")
+    (test-case '(pi)
+               t t "COMMON-LISP:PI names a defined constant")
     ;; forbidden default or supplied-p for &OPTIONAL or &KEY arguments
     (test-case '(x &optional (y 0))
-               t t "invalid &OPTIONAL argument specifier (Y 0)")
+               t t "Invalid &OPTIONAL argument specifier (Y 0)")
     (test-case '(x &optional y))
     (test-case '(x y &key (z :z z-p))
-               t t "invalid &KEY argument specifier (Z :Z Z-P)")
+               t t "Invalid &KEY argument specifier (Z :Z Z-P)")
     (test-case '(x y &key z))
     (test-case '(x &optional (y 0) &key z)
-               t t "invalid &OPTIONAL argument specifier (Y 0)")
+               t t "Invalid &OPTIONAL argument specifier (Y 0)")
     (test-case '(x &optional y &key z)
                nil t "&OPTIONAL and &KEY found in the same lambda list")
     (test-case '(x &optional y &key (z :z))
-               t t "invalid &KEY argument specifier (Z :Z)")
+               t t "Invalid &KEY argument specifier (Z :Z)")
     (test-case '(x &optional y &key z)
                nil t "&OPTIONAL and &KEY found in the same lambda list")
     (test-case '(&optional &key (k :k k-p))
-               t t "invalid &KEY argument specifier (K :K K-P)")
+               t t "Invalid &KEY argument specifier (K :K K-P)")
     (test-case '(&optional &key k))
     ;; forbidden &AUX
     (test-case '(x y z &optional a &aux g h)
@@ -2046,12 +2064,12 @@
                 i-dont-want-to-be-clobbered-1
                 i-dont-want-to-be-clobbered-2))
 (handler-bind ((warning #'muffle-warning))
-(defgeneric i-dont-want-to-be-clobbered-1 (t t t))
+(defgeneric i-dont-want-to-be-clobbered-1 (x y z))
 (defmethod i-dont-want-to-be-clobbered-2 ((x cons) y z)
   y))
 (defun i-cause-an-gf-info-update ()
   (i-dont-want-to-be-clobbered-2 t t t))
-(with-test (:name :defgeneric-should-clobber-ftype)
+(with-test (:name (defgeneric :should-clobber-ftype))
   ;; (because it doesn't check the argument or result types)
   (assert (equal '(function (t t t) *)
                  (sb-kernel:type-specifier
