@@ -10,6 +10,8 @@ changes relative to sbcl-1.3.19:
   * bug fix: a DEFCONSTANT with a non non-eql-comparable object as the value
     could cause miscompilation if that constant appeared as the default
     expression for an &OPTIONAL binding
+  * bug fix: generic function lambda lists are now checked for repeated
+    and otherwise illegal entries. (lp#1704114)
 
 changes in sbcl-1.3.19 relative to sbcl-1.3.18:
   * enhancement: specialized arrays can be printed readably without using
@@ -23,7 +25,7 @@ changes in sbcl-1.3.19 relative to sbcl-1.3.18:
   * bug fix: align the stack in callback wrappers to defend against C
     compiler over-aggressive use of SIMD.  (lp#1697528)
   * bug fix: don't try to find the class when reporting that a class does
-    not exist for a primitive type.  (lp#1697226) 
+    not exist for a primitive type.  (lp#1697226)
 
 changes in sbcl-1.3.18 relative to sbcl-1.3.17:
   * minor incompatible change: existing values of CFLAGS, ASFLAGS,
